Funcion de filtro por categoria terminado

--- a/style.css
+++ b/style.css
@@ -176,6 +176,12 @@ a {
   padding-top: 10px;
 }
 
+.filtrosContainer {
+  display: flex;
+  padding-bottom: 30px;
+  justify-content: space-around;
+}
+
 .btn {
   display: inline-flex;
   align-items: center;
